--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://www.pinclipart.com/picdir/big/146-1462698_movie-play-icon-movies-png-clipart.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -18,10 +21,27 @@
     <!-- FONTS -->
 
     <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font-family: 'Bungee Shade', cursive; -->
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Codystar&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font-family: 'Cabin Sketch', cursive; -->
+
+    <link
       href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap"
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Codystar&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font-family: 'Codystar', cursive; -->
     <link
       href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap"
       rel="stylesheet"
@@ -52,7 +72,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ShowTime Movies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
